--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "freddysae0",
-  "license": "ISC",
+  "license": "MIT",
   "keywords": [
     "Quotes",
     "Donald Trump"
