--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Random Donald Trump quotes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon test.js"
   },
   "author": "freddysae0",
   "license": "MIT",
